exports[`React Element Snapshots snapshots {"@media (max-width:1px)":{"color":"red"}} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array [
        Object {
          "className": "c43660e9eeeba4977",
          "cssText": "@media (max-width:1px){.c43660e9eeeba4977{color:red}}"
        }
      ]
    }
  } />
`;

exports[`React Element Snapshots snapshots {"@media (max-width:1px)":{}} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array []
    }
  } />
`;

exports[`React Element Snapshots snapshots {"color":"red",":hover":{"color":"blue"}} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array [
        Object {
          "className": "c46576037294a675a",
          "cssText": ".c46576037294a675a:hover{color:blue}"
        },
        Object {
          "className": "c29ec1a4d45b6d719",
          "cssText": ".c29ec1a4d45b6d719{color:red}"
        }
      ]
    }
  } />
`;

exports[`React Element Snapshots snapshots {"color":"red",":hover":{}} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array [
        Object {
          "className": "c29ec1a4d45b6d719",
          "cssText": ".c29ec1a4d45b6d719{color:red}"
        }
      ]
    }
  } />
`;

exports[`React Element Snapshots snapshots {"color":"red"} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array [
        Object {
          "className": "c29ec1a4d45b6d719",
          "cssText": ".c29ec1a4d45b6d719{color:red}"
        }
      ]
    }
  } />
`;

exports[`React Element Snapshots snapshots {} 1`] = `
<div
  style={
    ElementStyle {
      "cssRules": Array []
    }
  } />
`;

exports[`cssStyleDeclarationsToText snapshots {"color":"red"} 1`] = `"color:red"`;

exports[`cssStyleDeclarationsToText snapshots {"color":["red","blue"]} 1`] = `"color:red;color:blue"`;

exports[`styleRules snapshots {"@media (max-width:1px)":{"color":"red"}} 1`] = `
Array [
  Object {
    "className": "c43660e9eeeba4977",
    "cssText": "@media (max-width:1px){.c43660e9eeeba4977{color:red}}"
  }
]
`;

exports[`styleRules snapshots {"@media (max-width:1px)":{}} 1`] = `Array []`;

exports[`styleRules snapshots {"color":"red",":hover":{"color":"blue"}} 1`] = `
Array [
  Object {
    "className": "c46576037294a675a",
    "cssText": ".c46576037294a675a:hover{color:blue}"
  },
  Object {
    "className": "c29ec1a4d45b6d719",
    "cssText": ".c29ec1a4d45b6d719{color:red}"
  }
]
`;

exports[`styleRules snapshots {"color":"red",":hover":{}} 1`] = `
Array [
  Object {
    "className": "c29ec1a4d45b6d719",
    "cssText": ".c29ec1a4d45b6d719{color:red}"
  }
]
`;

exports[`styleRules snapshots {"color":"red"} 1`] = `
Array [
  Object {
    "className": "c29ec1a4d45b6d719",
    "cssText": ".c29ec1a4d45b6d719{color:red}"
  }
]
`;

exports[`styleRules snapshots {} 1`] = `Array []`;
